// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should see the right expense 1`] = `
<div>
  <Link
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </Link>
  <p>
    $1.95
    -
    January 1st, 1970
  </p>
</div>
`;

exports[`Should see the right expense 2`] = `
<div>
  <Link
    to="/edit/undefined"
  >
    <h3 />
  </Link>
  <p>
    $0.00
    -
    May 19th, 2023
  </p>
</div>
`;
